--- a/requirements.txt
+++ b/requirements.txt
@@ -94,6 +94,7 @@ plotly-express==0.4.0
 prometheus-client==0.10.1
 prompt-toolkit==3.0.18
 protobuf==3.15.5
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pyarrow==3.0.0
 pyasn1==0.4.8
@@ -106,6 +107,7 @@ pyrsistent==0.17.3
 PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2021.1
+pywin32==300
 pywinpty==0.5.7
 pyzmq==22.0.3
 regex==2021.4.4
