--- a/requirements.txt
+++ b/requirements.txt
@@ -106,7 +106,7 @@ pyrsistent==0.17.3
 PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2021.1
-pypiwin32==223
+pywin32==221
 pywinpty==0.5.7
 pyzmq==22.0.3
 regex==2021.4.4
