--- a/requirements.txt
+++ b/requirements.txt
@@ -151,3 +151,14 @@ wrapt==1.12.1
 yarl==1.6.3
 yfinance==0.1.55
 zope.interface==5.2.0
+pyquery==1.4.3
+requests-html==0.10.0
+fake-useragent==0.1.11
+feedparser==6.0.8
+parse==1.19.0
+bs4==0.0.1
+w3lib==1.22.0
+pyppeteer==0.2.5
+yahoo-fin==0.8.9.1
+
+  
